--- a/main/references.bib
+++ b/main/references.bib
@@ -76,6 +76,7 @@
 }  
 
 
+
 @book{Gradshteyn-Ryzhik,
     author    = "Gradshteyn, I S and Ryzhik, I M",
     title     = "{T}able of {I}ntegrals, {S}eries, and {P}roducts",
@@ -85,6 +86,17 @@
     isbn      = "0-12-294760-6"
 }
 
+@article{Kohler2001,
+  author={Torsten Köhler and Peter Maass and Peter Wust and Martin Seebass},
+  title={A fast algorithm to find optimal controls of multiantenna applicators in regional hyperthermia},
+  journal={Physics in Medicine \& Biology},
+  volume={46},
+  number={9},
+  pages={2503},
+  url={http://stacks.iop.org/0031-9155/46/i=9/a=318},
+  year={2001}
+  }
+  
 @book{Arfken-Weber,
     author    = "Arfken, G B and Weber, H J and Harris, F E",
     title     = "{M}athematical {M}ethods for {P}hysisits",
